# cassandraxx

./: .gitignore  .gitmodules  CMakeLists.txt
include/: client.hpp  cluster.hpp  error.hpp  errorNotSetException.hpp  future.hpp  futureError.hpp  session.hpp  statement.hpp
src/: client.cpp  cluster.cpp  error.cpp  future.cpp  session.cpp  statement.cpp  statementBuilder.cpp
test/: CMakeLists.txt  clientTest.cpp
